My Third Commit
Just added something

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -35,7 +35,7 @@ body {margin:30px;}
 
 
 <section>
-  <h2>I don't know what I am going to add into this right now. I just want to add another line. 
+  <h2>I don't know what I am going to add into this right now. I just want to add another line. Adding something
   </h2>
   <p>
    
