These are my changes for my forms
I have changed some information on my forms and updated some of the
styling.

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,37 +19,30 @@
   </ul>
 </nav>
 
-
-
-
-
 <div class="img">
   <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
+    <img src=".jpg"  width="200" height="100">
   </a>
   <div class="desc"></div>
 </div>
 
-body {margin:30px;}
-
-
 
 <section>
-  <h2>I don't know what I am going to add into this right now. I just want to add another line. 
-  Adding something
+  <h2>I don't know what I am going to add into this right now. <br> I just want to add another line. 
+  <br> Adding something something else to make this a larger section.... <br>
+  And yet, another line of BS to fill the gap. 
   </h2>
-  <p>
-   
-  </p>
-</section>
+ </section>
+  
 
 <aside>
-  <h2>I want to write some things in here... 
-  </h2>
-  <p>
+  <h2>I hope that this will look okay when I am done</h2>
+  <h3>I want to write some things in here... </h3>
+ <p>This is some text in a paragraph.
     I will need to think of something to write in here. <br>
-    Although I have no idea what I should write at this specific moment in time.
-  </p>
+    Although I have no idea what I should write, <br>
+    at this specific moment in time. I just want this filled up a bit more to look better. 
+ </p>
 </aside>
 
 </body>
