--- a/signIn.html
+++ b/signIn.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Sign In</title>
-<link rel="stylesheet" type="text/css" href="mainstyle.css">
+
 <link rel="stylesheet" type="text/css" href="signIn.css">
 
 <style>
@@ -30,7 +30,8 @@ body {margin:150px;}
     </ul>
  
 </form>
-
+p:before { content: " "; }
+p:before { content: "&nbsp;"; }
 </section>
 </body>
 <footer>
