I have made some significant changes
I have changed my about me and bio page and also fixed some things on
my sign in.

--- a/mySplashScreen.html
+++ b/mySplashScreen.html
@@ -5,37 +5,61 @@
 <title>My Splash Screen</title>
 <link rel="stylesheet" type="text/css" href="mainstyle.css">
 <style>
-body {margin:30px;}
+body {margin:50px;}
 
-div.mySplashPhoto {
-  width: 95%;
-  background-color: #9099A2;
-  box-shadow: 0 14px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 40px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 75px;
-}
-
-div.container {
-  text-align: center;
-  padding: 10px 10px;
-}
 </style>
 </head>
 <body>
-<h1 style="color:#D5D5D5; ">Welcome to My Page</h1>
 
 
-<div class="mySplashPhoto">
-  <img src="flowers.JPG" style="width:100%">
-  <div class="container">
-    <p>
-    <a HREF= "Pages/signIn.html.html">
-    Enter if you Dare! 
-   
-    </a>
-  </div>
+<h1 style="color: #6D7993; ">Welcome to My Page</h1>
+
+
+	<h2>Sign up for Full Access</h2>
+	<pre>
+	
+	</pre>
+	
+	<h3> Don't have time....</h3>
+	<pre></pre>
+	<h3> Just enter as a guest for now! </h3>
+
+	<pre>
+	</pre>
+  <form id="contact" action="" method="post">
+ 
+      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+      <input placeholder="Your Email Address" type="email" tabindex="2" required>
+      <div class="signupButton">
+			<input type="submit" name="submit" id="submit" value="Full View Access" />
+		</div>
+  </form>
+
+<div>
+
+ <pre>
+ 
+ 
+ 
+ </pre>
+
+
 </div>
+
+ <form id="contact" action="" method="post">
+   
+      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+      <input placeholder="Write Guest Here" type="text" tabindex="2" required>
+      <div class="signupButton">
+			<input type="submit" name="submit" id="submit" value="Guest View Only" />
+		</div>
+  </form>
+<pre>
+
+</pre>
 </body>
 <footer>
-<FORM><INPUT Type="button" VALUE="Back" onClick="history.go(-1);return true;"></FORM>
+<hr>
+
 </footer>
 </html>
