--- a/signIn.html
+++ b/signIn.html
@@ -12,17 +12,17 @@ body {margin:150px;}
 
 </head>
 <body>
-<h1 style="color:#D5D5D5; ">Please Sign In Below!</h1>
-<div>
+<h1 style="color:#D5D5D5; ">Please Create Your Log In Below!</h1>
+<pre>
 
 
+</pre>
 
-</div>
 <section class="loginform cf">
 <form name="login" action="index_submit" method="get" accept-charset="utf-8">
   <ul>
     <li><label for="usermail">Email</label>
-    <input type="email" name="usermail" placeholder="yourname@email.com" required></li>
+    <input type="email" name="usermail" placeholder="yourname@email.com" required></li> 
     <li><label for="password">Password</label>
     <input type="password" name="password" placeholder="password" required></li>
     <li>
@@ -30,10 +30,21 @@ body {margin:150px;}
     </ul>
  
 </form>
-p:before { content: " "; }
-p:before { content: "&nbsp;"; }
+
 </section>
 </body>
+<pre>
+
+
+
+</pre>
+<hr>
+
+<pre>
+
+
+
+</pre>
 <footer>
 <FORM><INPUT Type="button" VALUE="Back" onClick="history.go(-1);return true;"></FORM>
 </footer>
