Made some changes in several of my forms and formatted my coding
Formatted my HTML to look cleaner and also made several changed this
morning.

--- a/mySplashScreen.html
+++ b/mySplashScreen.html
@@ -5,61 +5,66 @@
 <title>My Splash Screen</title>
 <link rel="stylesheet" type="text/css" href="mainstyle.css">
 <style>
-body {margin:50px;}
-
+body {
+	margin: 50px;
+}
 </style>
 </head>
 <body>
 
 
-<h1 style="color: #6D7993; ">Welcome to My Page</h1>
+	<h1 style="color: #6D7993;">Welcome to My Page</h1>
 
 
 	<h2>Sign up for Full Access</h2>
 	<pre>
 	
 	</pre>
-	
-	<h3> Don't have time....</h3>
+
+	<h3>Don't have time....</h3>
 	<pre></pre>
-	<h3> Just enter as a guest for now! </h3>
+	<h3>Just enter as a guest for now!</h3>
 
 	<pre>
 	</pre>
-  <form id="contact" action="" method="post">
- 
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-      <input placeholder="Your Email Address" type="email" tabindex="2" required>
-      <div class="signupButton">
-			<input type="submit" name="submit" id="submit" value="Full View Access" />
+	<form id="contact" action="" method="post">
+
+		<input placeholder="Your name" type="text" tabindex="1" required
+			autofocus> <input placeholder="Your Email Address"
+			type="email" tabindex="2" required>
+		<div class="signupButton">
+			<input type="submit" name="submit" id="submit"
+				value="Full View Access" />
 		</div>
-  </form>
+	</form>
 
-<div>
+	<div>
 
- <pre>
+		<pre>
  
  
  
  </pre>
 
 
-</div>
+	</div>
 
- <form id="contact" action="" method="post">
-   
-      <input placeholder="Your name" type="text" tabindex="1" required autofocus>
-      <input placeholder="Write Guest Here" type="text" tabindex="2" required>
-      <div class="signupButton">
-			<input type="submit" name="submit" id="submit" value="Guest View Only" />
+	<form id="contact" action="" method="post">
+
+		<input placeholder="Your name" type="text" tabindex="1" required
+			autofocus> <input placeholder="Write Guest Here" type="text"
+			tabindex="2" required>
+		<div class="signupButton">
+			<input type="submit" name="submit" id="submit"
+				value="Guest View Only" />
 		</div>
-  </form>
-<pre>
+	</form>
+	<pre>
 
 </pre>
 </body>
 <footer>
-<hr>
+	<hr>
 
 </footer>
 </html>
