--- a/myWork.html
+++ b/myWork.html
@@ -7,132 +7,137 @@
 
 </head>
 <header>
-  <h1>My Work Gallery</h1>
+	<h1>My Work Gallery</h1>
 </header>
 <nav>
-  <ul>
-    <li><a href="#">My Work</a></li>
-    <li><a href="#">About Me</a></li>
-    <li><a href="#">Contact Me</a></li>
-  </ul>
+	<ul>
+		<li><a href="#">My Work</a></li>
+		<li><a href="#">About Me</a></li>
+		<li><a href="#">Contact Me</a></li>
+	</ul>
 </nav>
 <style>
-body {margin:30px;}
+body {
+	margin: 30px;
+}
 
 div.img {
-    margin: 10px;
-    border: 5px solid #9099A2;
-    float: left;
-    width: 215px;
+	margin: 10px;
+	border: 5px solid #9099A2;
+	float: left;
+	width: 215px;
 }
 
 div.img:hover {
-    border: 10px solid  #6D7993;
+	border: 10px solid #6D7993;
 }
 
 div.img img {
-    width: 100%;
-    height: auto;
+	width: 100%;
+	height: auto;
 }
 
 div.desc {
-    padding: 15px;
-    text-align: center;
+	padding: 15px;
+	text-align: center;
 }
 </style>
 
 
 <body>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+	<div class="img">
+		<a target="_blank" href=".jpg"> <img src=".jpg" width="300"
+			height="200">
+		</a>
+		<div class="desc">Add a description of the image here</div>
+	</div>
+
+
+	<footer>
+		<FORM>
+			<INPUT Type="button" VALUE="Back"
+				onClick="history.go(-1);return true;">
+		</FORM>
+	</footer>
 </body>
-
-<footer>
-<FORM><INPUT Type="button" VALUE="Back" onClick="history.go(-1);return true;"></FORM>
-</footer>
-
 </html>
 
 
