--- a/signIn.html
+++ b/signIn.html
@@ -7,31 +7,33 @@
 <link rel="stylesheet" type="text/css" href="signIn.css">
 
 <style>
-body {margin:150px;}
+body {
+	margin: 150px;
+}
 </style>
 
 </head>
 <body>
-<h1 style="color:#D5D5D5; ">Please Create Your Log In Below!</h1>
-<pre>
+	<h1 style="color: #D5D5D5;">Please Create Your Log In Below!</h1>
+	<pre>
 
 
 </pre>
 
-<section class="loginform cf">
-<form name="login" action="index_submit" method="get" accept-charset="utf-8">
-  <ul>
-    <li><label for="usermail">Email</label>
-    <input type="email" name="usermail" placeholder="yourname@email.com" required></li> 
-    <li><label for="password">Password</label>
-    <input type="password" name="password" placeholder="password" required></li>
-    <li>
-    <input type="submit" value="Login"></li>
-    </ul>
- 
-</form>
+	<section class="loginform cf">
+		<form name="login" action="index_submit" method="get"
+			accept-charset="utf-8">
+			<ul>
+				<li><label for="usermail">Email</label> <input type="email"
+					name="usermail" placeholder="yourname@email.com" required></li>
+				<li><label for="password">Password</label> <input
+					type="password" name="password" placeholder="password" required></li>
+				<li><input type="submit" value="Login"></li>
+			</ul>
 
-</section>
+		</form>
+
+	</section>
 </body>
 <pre>
 
@@ -46,14 +48,8 @@ body {margin:150px;}
 
 </pre>
 <footer>
-<FORM><INPUT Type="button" VALUE="Back" onClick="history.go(-1);return true;"></FORM>
+	<FORM>
+		<INPUT Type="button" VALUE="Back"
+			onClick="history.go(-1);return true;">
+	</FORM>
 </footer>
-
-  
-
-
-
-
-
-
-
