--- a/thanks.html
+++ b/thanks.html
@@ -5,33 +5,37 @@
 <title>Thank You Screen</title>
 <link rel="stylesheet" type="text/css" href="mainstyle.css">
 <link rel="stylesheet" type="text/css" href="thanks.css">
+</head>
+
+
 <body>
-<header>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#">My Work</a></li>
+				<li><a href="#">About Me</a></li>
+				<li><a href="#">Contact Me</a></li>
+			</ul>
+		</nav>
+	</header>
+	<pre>
 
-<nav>
-  <ul>
-    <li><a href="#">My Work</a></li>
-    <li><a href="#">About Me</a></li>
-    <li><a href="#">Contact Me</a></li>
-  </ul>
-</nav>
-</header>
 
 
-  <h1>Thanks for Contacting Me!</h1>
-  <div>
-  </div>
-  
-  <h3>I will get back to you shortly...</h3>
+	</pre>
+	<h1>Thanks for Contacting Me!</h1>
 
-<div class="img">
-  <a target="_blank" href=".jpg">
-    <img src=".jpg"  width="400" height="200">
-  </a>
-  <div class="desc"></div>
-</div>
+	<h3>I will get back to you shortly...</h3>
 
-<footer>
-  <hr />
- <FORM><INPUT Type="button" VALUE="Back" onClick="history.go(-1);return true;"></FORM>
-</footer>
+
+
+	
+		<footer>
+		<FORM>
+			<INPUT Type="button" VALUE="Back"
+				onClick="history.go(-1);return true;">
+		</FORM>
+	</footer>
+</body>
+
+</html>
