Changed Links and some formatting work
I changed the links and did some formatting to make it more clear.

--- a/html/mySplashScreen.html
+++ b/html/mySplashScreen.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>My Splash Screen</title>
-<link rel="stylesheet" type="text/css" href="mainstyle.css">
+<link rel="stylesheet" type="text/css" href="../css/mainstyle.css">
 <style>
 body {
 	margin: 50px;
