--- a/html/contactMe.html
+++ b/html/contactMe.html
@@ -3,14 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <title>Contact Me</title>
-<link rel="stylesheet" type="text/css" href="mainstyle.css">
-<link rel="stylesheet" type="text/css" href="contactMe.css">
+<link rel="stylesheet" type="text/css" href="../css/mainstyle.css">
+<link rel="stylesheet" type="text/css" href="../css/contactMe.css">
+
 <body>
 	<nav>
 		<ul>
-			<li><a href="#">My Work</a></li>
-			<li><a href="#">About Me</a></li>
-			<li><a href="#">Contact Me</a></li>
+			<li><a href="/Users/Melissa/Documents/workspace/Test/mypages/myWork.html">My Work</a></li>
+			<li><a href="/Users/Melissa/Documents/workspace/Test/mypages/aboutMe.html">About Me</a></li>
+			<li><a href="/Users/Melissa/Documents/workspace/Test/mypages/contactMe.html">Contact Me</a></li>
 		</ul>
 	</nav>
 
