--- a/html/myWork.html
+++ b/html/myWork.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>My Work</title>
-<link rel="stylesheet" type="text/css" href="mainstyle.css">
+<link rel="stylesheet" type="text/css" href="../css/mainstyle.css">
 
 </head>
 <header>
@@ -11,9 +11,15 @@
 </header>
 <nav>
 	<ul>
-		<li><a href="#">My Work</a></li>
-		<li><a href="#">About Me</a></li>
-		<li><a href="#">Contact Me</a></li>
+		<li><a
+			href="/Users/Melissa/Documents/workspace/Test/mypages/myWork.html">My
+				Work</a></li>
+		<li><a
+			href="/Users/Melissa/Documents/workspace/Test/mypages/aboutMe.html">About
+				Me</a></li>
+		<li><a
+			href="/Users/Melissa/Documents/workspace/Test/mypages/contactMe.html">Contact
+				Me</a></li>
 	</ul>
 </nav>
 <style>
