--- a/html/signIn.html
+++ b/html/signIn.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Sign In</title>
 
-<link rel="stylesheet" type="text/css" href="signIn.css">
+<link rel="stylesheet" type="text/css" href="../css/signIn.css">
 
 <style>
 body {
