I wanted to do some practice work

--- a/html/signIn.html
+++ b/html/signIn.html
@@ -34,7 +34,7 @@ body {
 		</form>
 
 	</section>
-</body>
+
 <pre>
 
 
@@ -53,3 +53,5 @@ body {
 			onClick="history.go(-1);return true;">
 	</FORM>
 </footer>
+</body>
+</html>
